--- a/#000 --- Apps --- 000#/FlashLight/V1.0/app/src/main/res/values/colors.xml
+++ b/#000 --- Apps --- 000#/FlashLight/V1.0/app/src/main/res/values/colors.xml
@@ -7,6 +7,8 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="redis">#FFFF0000</color>
+    <color name="green">#ff54DDA5</color>
 
     <color name="bg">#FF0F1648</color>
 
