--- a/#000 --- Apps --- 000#/TicTacToe/V1.1/app/src/main/res/layout/activity_main.xml
+++ b/#000 --- Apps --- 000#/TicTacToe/V1.1/app/src/main/res/layout/activity_main.xml
@@ -1,18 +1,193 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/background"
     tools:context=".MainActivity">
 
+
     <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:textColor="@color/white"
+        android:layout_marginTop="50dp"
+        android:textSize="27dp"
+        android:textStyle="bold"
+        android:text="XO Network BT Game"></TextView>
+
+    <LinearLayout
+        android:id="@+id/lay1"
+        android:layout_margin="30dp"
+        android:layout_centerInParent="true"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+        <TextView
+            android:textSize="17dp"
+            android:layout_margin="10dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/bt_permision_result"
+            android:text="BT:FALSE"></TextView>
+
+        <TextView
+            android:textSize="17dp"
+            android:layout_margin="10dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/bta_permision_result"
+            android:text="BTA:FALSE"></TextView>
+
+        <TextView
+            android:textSize="17dp"
+            android:layout_margin="10dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/btc_permision_result"
+            android:text="BTC:FALSE"></TextView>
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/lay1"
+        android:layout_centerInParent="true"
+        android:layout_marginStart="30dp"
+        android:layout_marginTop="0dp"
+        android:layout_marginEnd="30dp"
+        android:layout_marginBottom="30dp"
+        android:orientation="horizontal">
+
+
+        <TextView
+            android:id="@+id/fl_permision_result"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="10dp"
+            android:text="FL:FALSE"
+            android:textSize="17dp"></TextView>
+
+        <TextView
+            android:id="@+id/cr_permision_result"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="10dp"
+            android:text="CR:FALSE"
+            android:textSize="17dp"></TextView>
+
+        <TextView
+            android:id="@+id/bsc_permision_result"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="10dp"
+            android:text="BSC:FALSE"
+            android:textSize="17dp"></TextView>
+
+    </LinearLayout>
+
+    <Button
+        android:id="@+id/bt_enable"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:text="Enable BLUETOOTH"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentRight="true"
+        android:layout_marginRight="10dp"
+        android:visibility="visible"
+        android:layout_marginBottom="70dp">
+    </Button>
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <Button
+        android:id="@+id/bt_game"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Start "
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentRight="true"
+        android:layout_marginRight="10dp"
+        android:visibility="visible"
+        android:layout_marginBottom="120dp">
+    </Button>
+
+    <Button
+        android:id="@+id/bt_permision"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Give BT PERMISION"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentRight="true"
+        android:layout_marginRight="10dp"
+        android:visibility="visible"
+        android:layout_marginBottom="10dp">
+    </Button>
+
+
+    <Button
+        android:id="@+id/bta_permision"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="BT_A PERMISION"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentRight="true"
+        android:layout_marginRight="10dp"
+        android:visibility="gone"
+        android:layout_marginBottom="10dp">
+    </Button>
+
+    <Button
+        android:id="@+id/btc_permision"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="BT_C PERMISION"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentRight="true"
+        android:layout_marginRight="10dp"
+        android:visibility="gone"
+        android:layout_marginBottom="10dp">
+    </Button>
+
+    <Button
+        android:id="@+id/fl_permision"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="FL PERMISION"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentRight="true"
+        android:layout_marginRight="10dp"
+        android:visibility="gone"
+        android:layout_marginBottom="10dp">
+    </Button>
+
+    <Button
+        android:id="@+id/cr_permision"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="CR PERMISION"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentRight="true"
+        android:layout_marginRight="10dp"
+        android:visibility="gone"
+        android:layout_marginBottom="10dp">
+    </Button>
+
+    <Button
+        android:id="@+id/bsc_permision"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="BSC PERMISION"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentRight="true"
+        android:layout_marginRight="10dp"
+        android:visibility="gone"
+        android:layout_marginBottom="10dp">
+    </Button>
+
+
+
+
+</RelativeLayout>
